Bug 433327 - Several values of "Information" column are not entirely readable in Wayland module
Summary: Several values of "Information" column are not entirely readable in Wayland m...
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: Info (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-20 12:53 UTC by Patrick Silva
Modified: 2021-03-09 14:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.3
Sentry Crash Report:


Attachments
screenshot (136.09 KB, image/png)
2021-02-20 12:53 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-02-20 12:53:30 UTC
Created attachment 135966 [details]
screenshot

SUMMARY
We can make all values of "Information" column entirely readable resizing this column manually. But the column need to be resized again every time we re-open Wayland module because its width is not remembered after resizing.

STEPS TO REPRODUCE
1. start Wayland session
2. open Kinfocenter > Graphics > Wayland
3. 

OBSERVED RESULT
As we can see in the attached screenshot, several values of "Information" column are not entirely readable.

EXPECTED RESULT
default columns width should be enough to make all values entirely readable

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Patrick Silva 2021-02-20 12:55:53 UTC
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 2 Nate Graham 2021-02-22 22:01:17 UTC
Confirmed, though of course you can resize the table header to see more.
Comment 3 Bug Janitor Service 2021-03-09 13:25:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kinfocenter/-/merge_requests/25
Comment 4 Harald Sitter 2021-03-09 14:15:37 UTC
Git commit c315020a98cf6333a9ad252ccd139023a3cbd7de by Harald Sitter.
Committed on 09/03/2021 at 14:14.
Pushed by sitter into branch 'master'.

force-resize columns in the wayland module

inspired by similar code in the opengl module. since tree columns can
have wildly different size requirements based on the content we'll want
to resize them to ensure labels can be displayed completely
FIXED-IN: 5.21.3

M  +10   -0    Modules/base/info_wayland.cpp

https://invent.kde.org/plasma/kinfocenter/commit/c315020a98cf6333a9ad252ccd139023a3cbd7de
Comment 5 Harald Sitter 2021-03-09 14:16:31 UTC
Git commit 7727b3f8c810e4dde63daf3935e545f9c8dcd65e by Harald Sitter.
Committed on 09/03/2021 at 14:16.
Pushed by sitter into branch 'cherry-pick-c315020a'.

force-resize columns in the wayland module

inspired by similar code in the opengl module. since tree columns can
have wildly different size requirements based on the content we'll want
to resize them to ensure labels can be displayed completely
FIXED-IN: 5.21.3


(cherry picked from commit c315020a98cf6333a9ad252ccd139023a3cbd7de)

M  +10   -0    Modules/base/info_wayland.cpp

https://invent.kde.org/plasma/kinfocenter/commit/7727b3f8c810e4dde63daf3935e545f9c8dcd65e