force-resize columns in the wayland module

inspired by similar code in the opengl module. since tree columns can
have wildly different size requirements based on the content we'll want
to resize them to ensure labels can be displayed completely

BUG: 433327
FIXED-IN: 5.21.3


(cherry picked from commit c315020a98cf6333a9ad252ccd139023a3cbd7de)